--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "connect-mongodb-session": "^3.1.1",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
+    "mongodb": "^4.10.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
   }
