--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "test": "jest --watchAll --coverage"
   },
   "keywords": [],
   "author": "",
@@ -14,11 +15,18 @@
     "connect-mongodb-session": "^3.1.1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
+    "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
+    "express-validator": "^6.14.2",
     "method-override": "^3.0.0",
     "mongodb": "^4.10.0",
     "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.0.3",
+    "jest": "^29.1.2"
   }
 }
